# cw2-lessons-displayer

./: .git-cliff.toml  .gitignore  README.md  cwplugin.json  main.py  pyproject.toml
.github/workflows/: release.yml
qml/: FullScreenWindow.qml  LessonsDisplay.qml
