[project]
name = "cw2-lessons-displayer"
version = "1.0.0"
description = "Display your lessons!"
authors = [
    {name = "Yersmagit"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["class-widgets-sdk"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
